[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/AirCutterProjectile.gd" type="Script" id=1]
[ext_resource path="res://Scenes/AirCutterParticle.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 35.0143

[node name="AirCutterProjectile" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 96.595, 0 )
scale = Vector2( 3.106, 2.177 )
shape = SubResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="AirCutter" parent="." instance=ExtResource( 2 )]
amount = 64
lifetime = 0.29
speed_scale = 2.08

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
